# image-recognition

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.agent_docs/: pipeline.md
src/face_rec/: __init__.py  config.py  database.py  engine.py  face_rec.py  logging_config.py  models.py  service.py
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_engine.py  test_forcing.py  test_forcing_service.py  test_logging.py  test_models.py  test_replace_path.py  test_service.py
