[project]
name = "face-rec"
version = "0.1.0"
description = "Face recognition over an image collection: index faces, then find every image containing a given person."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sebastien Morand", email = "seb.morand@gmail.com" }]
dependencies = [
    "typer>=0.15.1",
    "rich>=13.9.4",
    "pydantic-settings>=2.7.1",
    "insightface>=0.7.3",
    "onnxruntime>=1.20.1",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=1.26.4,<2.0",
    "sqlite-vec>=0.1.6",
    "pillow>=11.1.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
]

[project.scripts]
face-rec = "face_rec.face_rec:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.1",
    "ruff>=0.9.2",
    "bandit>=1.8.0",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_rec"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RUF"]
ignore = ["B008"]  # typer uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = ["insightface.*", "cv2.*", "sqlite_vec.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 70
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
